Tworzenie publikacji przez zarejestrowanego użytkownika z przypisaną rolą canPublish

--- a/Konferencja/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Konferencja/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Konferencja.Models.ExternalLoginConfirmationViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Zarejestruj";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
