--- a/Konferencja/Views/Reviews/Details.cshtml
+++ b/Konferencja/Views/Reviews/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Konferencja.Models.Conference
+﻿@model Konferencja.Models.Review
 
 @{
     ViewBag.Title = "Szczegóły";
@@ -7,31 +7,31 @@
 <h2>Szczegóły</h2>
 
 <div>
-    <h4>Konferencja</h4>
+    <h4>Recenzja</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Date)
+            @Html.DisplayNameFor(model => model.Publication.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Date)
+            @Html.DisplayFor(model => model.Publication.Title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Theme)
+            @Html.DisplayNameFor(model => model.Reviewer.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Theme)
+            @Html.DisplayFor(model => model.Reviewer.Name)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Publications)
+            @Html.DisplayNameFor(model => model.Grade)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Publications, "PublicationTemplate")
+            @Html.DisplayFor(model => model.Grade)
         </dd>
 
     </dl>
