--- a/Konferencja/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Konferencja/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Zapomniane hasło";
 }
 
 <hgroup class="title">
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Spradź swój email w celu zresetowania hasła.
     </p>
 </div>
 	
