--- a/Konferencja/Views/Shared/Lockout.cshtml
+++ b/Konferencja/Views/Shared/Lockout.cshtml
@@ -1,10 +1,10 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Locked Out";
+    ViewBag.Title = "Blokowanie konta";
 }
 
 <hgroup>
-    <h1 class="text-danger">Locked out.</h1>
-    <h2 class="text-danger">This account has been locked out, please try again later.</h2>
+    <h1 class="text-danger">Blokowanie konta</h1>
+    <h2 class="text-danger">To konto zostało zablokowane. Spróbuj ponownie później.</h2>
 </hgroup>
