--- a/Konferencja/Views/Conferences/Details.cshtml
+++ b/Konferencja/Views/Conferences/Details.cshtml
@@ -31,7 +31,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Publications, "PublicationTemplate")
+            @Html.DisplayFor(model => model.AcceptedPublications, "PublicationTemplate")
         </dd>
 
     </dl>
