--- a/Konferencja/Views/Reviews/Delete.cshtml
+++ b/Konferencja/Views/Reviews/Delete.cshtml
@@ -1,22 +1,22 @@
 ﻿@model Konferencja.Models.Review
 
 @{
-    ViewBag.Title = "Usuń";
+    ViewBag.Title = "Delete";
 }
 
-<h2>Usuń</h2>
+<h2>Delete</h2>
 
-<h3>Czy napewno chcesz to usunąć?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Recenzja</h4>
+    <h4>Review</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Publication.Title)
+            @Html.DisplayNameFor(model => model.Publication.ApplicationUserId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Publication.Title)
+            @Html.DisplayFor(model => model.Publication.ApplicationUserId)
         </dd>
 
         <dt>
@@ -35,6 +35,22 @@
             @Html.DisplayFor(model => model.Grade)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Token)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Token)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
@@ -42,7 +58,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Powrót do listy", "Index")
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
