--- a/Konferencja/Views/Reviews/Details.cshtml
+++ b/Konferencja/Views/Reviews/Details.cshtml
@@ -1,21 +1,21 @@
 ﻿@model Konferencja.Models.Review
 
 @{
-    ViewBag.Title = "Szczegóły";
+    ViewBag.Title = "Details";
 }
 
-<h2>Szczegóły</h2>
+<h2>Details</h2>
 
 <div>
-    <h4>Recenzja</h4>
+    <h4>Review</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Publication.Title)
+            @Html.DisplayNameFor(model => model.Publication.ApplicationUserId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Publication.Title)
+            @Html.DisplayFor(model => model.Publication.ApplicationUserId)
         </dd>
 
         <dt>
@@ -34,9 +34,25 @@
             @Html.DisplayFor(model => model.Grade)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Token)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Token)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edytuj", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Powrót do listy", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Back to List", "Index")
 </p>
