--- a/Konferencja/Views/Reviews/Edit.cshtml
+++ b/Konferencja/Views/Reviews/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Konferencja.Models.Review
 
 @{
-    ViewBag.Title = "Edycja";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Edytuj</h2>
+<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Recenzja</h4>
+        <h4>Review</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -22,6 +22,22 @@
             <div class="col-md-10">
                 @Html.EnumDropDownListFor(model => model.Grade, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Grade, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Token, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Token, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Token, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -50,7 +66,7 @@
 }
 
 <div>
-    @Html.ActionLink("Powrót do listy", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
