--- a/Konferencja/Views/Publications/Details.cshtml
+++ b/Konferencja/Views/Publications/Details.cshtml
@@ -19,11 +19,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUserId)
+            @Html.DisplayNameFor(model => model.ApplicationUser.FullName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ApplicationUserId)
+            @Html.DisplayFor(model => model.ApplicationUser.FullName)
         </dd>
 
         <dt>
@@ -49,7 +49,6 @@
         <dd>
             @Html.DisplayFor(model => model.File)
         </dd>
-
     </dl>
 </div>
 <p>
