--- a/Konferencja/Views/Reviewers/Delete.cshtml
+++ b/Konferencja/Views/Reviewers/Delete.cshtml
@@ -1,16 +1,24 @@
 ﻿@model Konferencja.Models.Reviewer
 
 @{
-    ViewBag.Title = "Usuń";
+    ViewBag.Title = "Delete";
 }
 
-<h2>Usuń</h2>
+<h2>Delete</h2>
 
-<h3>Czy napewno chcesz to usunąć?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Recenzent</h4>
+    <h4>Reviewer</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.ApplicationUser.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ApplicationUser.Name)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -44,11 +52,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUserId)
+            @Html.DisplayNameFor(model => model.Photo)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ApplicationUserId)
+            @Html.DisplayFor(model => model.Photo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.References)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.References)
         </dd>
 
     </dl>
@@ -58,7 +74,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Powrót do listy", "Index")
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
