--- a/Konferencja/Views/Home/Index.cshtml
+++ b/Konferencja/Views/Home/Index.cshtml
@@ -58,35 +58,67 @@
 
     </table>
 </div>
-<h4>Nasi recenzenci</h4>
-<div class="row">
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="/Content/Images/person.png" alt="Recenzent">
-            <div class="caption">
-                <h3>Janusz Nieradka</h3>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p>@Html.ActionLink("Profil", "Details", "Reviewers", new { id = 1 }, new { @class="btn btn-primary" })</p>
+<h4>Nasi partnerzy</h4>
+<div class="container" style="padding-left:0;padding-right:0">
+    <div class="row">
+        <div class="col-sm-4 col-md-4">
+            <div class="post">
+                <div class="post-img-content">
+                    <img src="~/Content/Images/x_logo.png" class="img-responsive" />
+                    <span class="post-title">
+                        <b>Firma X</b><br />
+                    </span>
+                </div>
+                <div class="content">
+                    <div>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                        unknown printer took a galley of type and scrambled it to make a type specimen book.<br />
+                    </div>
+                    <div>
+                        <a href="https://www.microsoft.com/pl-pl/" class="btn btn-primary btn-sm">Zobacz więcej</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="~/Content/Images/person.png" alt="Recenzent">
-            <div class="caption">
-                <h3>Michał Celiński</h3>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p>@Html.ActionLink("Profil", "Details", "Reviewers", new { id = 2 }, new { @class = "btn btn-primary" })</p>
+        <div class="col-sm-4 col-md-4">
+            <div class="post">
+                <div class="post-img-content">
+                    <img src="~/Content/Images/y_logo.png" class="img-responsive" />
+                    <span class="post-title">
+                        <b>Firma Y</b><br />
+                    </span>
+                </div>
+                <div class="content">
+                    <div>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                        unknown printer took a galley of type and scrambled it to make a type specimen book.<br />
+                    </div>
+                    <div>
+                        <a href="https://www.microsoft.com/pl-pl/" class="btn btn-primary btn-sm">Zobacz więcej</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="~/Content/Images/person.png" alt="Recenzent">
-            <div class="caption">
-                <h3>Sławomir Antosik</h3>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p>@Html.ActionLink("Profil", "Details", "Reviewers", new { id = 3 }, new { @class = "btn btn-primary" })</p>
+        <div class="col-sm-4 col-md-4">
+            <div class="post">
+                <div class="post-img-content">
+                    <img src="~/Content/Images/z_logo.png" class="img-responsive" />
+                    <span class="post-title">
+                        <b>Firma Z</b><br />
+                    </span>
+                </div>
+                <div class="content">
+                    <div>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                        unknown printer took a galley of type and scrambled it to make a type specimen book.<br />
+                    </div>
+                    <div>
+                        <a href="https://www.microsoft.com/pl-pl/" class="btn btn-primary btn-sm">Zobacz więcej</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
