--- a/Konferencja/Views/Publications/Manage.cshtml
+++ b/Konferencja/Views/Publications/Manage.cshtml
@@ -6,31 +6,29 @@
 
 <h2>Zarządzaj publikacjami</h2>
 
-<div class="panel panel-primary">
+<div class="panel panel-warning">
     <div class="panel-heading">
-        <h3 class="panel-title">Publikacje bez recenzji</h3>
+        <h3 class="panel-title">Publikacje bez przydzielonych recenzji</h3>
     </div>
         @if (Model.PublicationsWithoutReviews.Count == 0)
         {
-            <div class="panel-body">
-                <p class="alert alert-info" role="alert">Brak publikacji bez recenzji</p>
-            </div>
+            <p class="msgbox">Brak publikacji bez przydzielonych recenzji</p>
         }
         else
-        { 
+        {
                 <table class="table table-hover">
                     <tr>
                         <th>
                             @Html.DisplayName("Konferencja")
                         </th>
+                        @if (User.IsInRole("canEdit"))
+                        {
                         <th>
                             @Html.DisplayName("Użytkownik")
                         </th>
+                        }
                         <th>
-                            @Html.DisplayName("Tytuł")
-                        </th>
-                        <th>
-                            @Html.DisplayName("Opis")
+                            @Html.DisplayName("Tytuł publikacji")
                         </th>
                         <th>
                             @Html.DisplayName("Plik")
@@ -44,66 +42,17 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.Conference.Theme)
                             </td>
+                            @if (User.IsInRole("canEdit"))
+                            {
                             <td>
                                 @Html.DisplayFor(modelItem => item.ApplicationUser.UserName)
                             </td>
+                            }
                             <td>
                                 @Html.DisplayFor(modelItem => item.Title)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Description)
                             </td>
                             <td>
                                 @Html.ActionLink("Pobierz", null, null, null, new { href = item.File })
-                            </td>
-                            <td>
-                                @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
-                                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
-                                @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
-                            </td>
-                        </tr>
-                    }
-                </table>
-        }
-</div>
-<hr />
-<div class="panel panel-primary">
-    <div class="panel-heading">
-        <h3 class="panel-title">Publikacje oczekujące na akceptację</h3>
-    </div>
-        @if (Model.PendingPublications.Count == 0)
-        {
-            <div class="panel-body">
-                <p class="alert alert-info" role="alert">Brak publikacji oczekujących na akceptację</p>
-            </div>
-        }
-        else
-        {
-                <table class="table table-hover">
-                    <tr>
-                        <th>
-                            @Html.DisplayName("Konferencja")
-                        </th>
-                        <th>
-                            @Html.DisplayName("Użytkownik")
-                        </th>
-                        <th>
-                            @Html.DisplayName("Tytuł")
-                        </th>
-                        <th></th>
-                    </tr>
-
-                    @foreach (var item in Model.PendingPublications)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Conference.Theme)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ApplicationUser.UserName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Title)
                             </td>
                             <td>
                                 @if (User.IsInRole("canEdit"))
@@ -114,13 +63,281 @@
                                 }
                                 @if (User.IsInRole("canPublish"))
                                 {
-                                    @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) <text>|</text>
                                     @Html.ActionLink("Szczegóły", "Details", new { id = item.ID })
                                 }
                             </td>
                         </tr>
                     }
-
                 </table>
         }
+</div>
+<br />
+<div class="panel panel-warning">
+    <div class="panel-heading">
+        <h3 class="panel-title">Publikacje oczekujące na recenzje</h3>
+    </div>
+    @if (Model.PublicationsWithoutAssessment.Count == 0)
+    {
+        <p class="msgbox">Brak publikacji oczekujących na recenzje</p>
+    }
+    else
+    {
+        <table class="table table-hover">
+            <tr>
+                <th>
+                    @Html.DisplayName("Konferencja")
+                </th>
+                @if (User.IsInRole("canEdit"))
+                {
+                    <th>
+                        @Html.DisplayName("Użytkownik")
+                    </th>
+                }
+                <th>
+                    @Html.DisplayName("Tytuł publikacji")
+                </th>
+                <th>
+                    @Html.DisplayName("Plik")
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.PublicationsWithoutAssessment)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Conference.Theme)
+                    </td>
+                    @if (User.IsInRole("canEdit"))
+                    {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ApplicationUser.UserName)
+                        </td>
+                    }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Pobierz", null, null, null, new { href = item.File })
+                    </td>
+                    <td>
+                        @if (User.IsInRole("canEdit"))
+                        {
+                            @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
+                        }
+                        @if (User.IsInRole("canPublish"))
+                        {
+                            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID })
+                        }
+                    </td>
+                </tr>
+            }
+
+        </table>
+    }
+</div>
+<br />
+<div class="panel panel-warning">
+    <div class="panel-heading">
+        <h3 class="panel-title">Publikacje oczekujące na akceptację</h3>
+    </div>
+    @if (Model.PendingPublications.Count == 0)
+    {
+        <p class="msgbox">Brak publikacji oczekujących na akceptację</p>
+    }
+    else
+    {
+        <table class="table table-hover">
+            <tr>
+                <th>
+                    @Html.DisplayName("Konferencja")
+                </th>
+                @if (User.IsInRole("canEdit"))
+                {
+                    <th>
+                        @Html.DisplayName("Użytkownik")
+                    </th>
+                }
+                <th>
+                    @Html.DisplayName("Tytuł")
+                </th>
+                <th>
+                    @Html.DisplayName("Plik")
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.PendingPublications)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Conference.Theme)
+                    </td>
+                    @if (User.IsInRole("canEdit"))
+                    {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ApplicationUser.UserName)
+                        </td>
+                    }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Pobierz", null, null, null, new { href = item.File })
+                    </td>
+                    <td>
+                        @if (User.IsInRole("canEdit"))
+                        {
+                            @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
+                        }
+                        @if (User.IsInRole("canPublish"))
+                        {
+                            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID })
+                        }
+                    </td>
+                </tr>
+            }
+
+        </table>
+    }
+</div>
+<br />
+<div class="panel panel-danger">
+    <div class="panel-heading">
+        <h3 class="panel-title">Odrzucone publikacje</h3>
+    </div>
+    @if (Model.RejectedPublications.Count == 0)
+    {
+        <p class="msgbox">Brak odrzuconych publikacji</p>
+    }
+    else
+    {
+        <table class="table table-hover">
+            <tr>
+                <th>
+                    @Html.DisplayName("Konferencja")
+                </th>
+                @if (User.IsInRole("canEdit"))
+                {
+                    <th>
+                        @Html.DisplayName("Użytkownik")
+                    </th>
+                }
+                <th>
+                    @Html.DisplayName("Tytuł publikacji")
+                </th>
+                <th>
+                    @Html.DisplayName("Plik")
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.RejectedPublications)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Conference.Theme)
+                    </td>
+                    @if (User.IsInRole("canEdit"))
+                    {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ApplicationUser.UserName)
+                        </td>
+                    }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Pobierz", null, null, null, new { href = item.File })
+                    </td>
+                    <td>
+                        @if (User.IsInRole("canEdit"))
+                        {
+                            @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
+                        }
+                        @if (User.IsInRole("canPublish"))
+                        {
+                            //@Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID })
+                        }
+                    </td>
+                </tr>
+            }
+
+        </table>
+    }
+</div>
+<br />
+<div class="panel panel-success">
+    <div class="panel-heading">
+        <h3 class="panel-title">Zaakceptowane publikacje</h3>
+    </div>
+    @if (Model.AcceptedPublications.Count == 0)
+    {
+        <p class="msgbox">Brak zaakceptowanych publikacji</p>
+    }
+    else
+    {
+        <table class="table table-hover">
+            <tr>
+                <th>
+                    @Html.DisplayName("Konferencja")
+                </th>
+                @if (User.IsInRole("canEdit"))
+                {
+                    <th>
+                        @Html.DisplayName("Użytkownik")
+                    </th>
+                }
+                <th>
+                    @Html.DisplayName("Tytuł publikacji")
+                </th>
+                <th>
+                    @Html.DisplayName("Plik")
+                </th>
+                <th></th>
+            </tr>
+
+            @foreach (var item in Model.AcceptedPublications)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Conference.Theme)
+                    </td>
+                    @if (User.IsInRole("canEdit"))
+                    {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ApplicationUser.UserName)
+                        </td>
+                    }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Pobierz", null, null, null, new { href = item.File })
+                    </td>
+                    <td>
+                        @if (User.IsInRole("canEdit"))
+                        {
+                            @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
+                        }
+                        @if (User.IsInRole("canPublish"))
+                        {
+                            //@Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) <text>|</text>
+                            @Html.ActionLink("Szczegóły", "Details", new { id = item.ID })
+                        }
+                    </td>
+                </tr>
+            }
+
+        </table>
+    }
 </div>
