--- a/Konferencja/Views/Shared/_Layout.cshtml
+++ b/Konferencja/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Moje publikacje <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li>@Html.ActionLink("Status publikacji", "Manage", "Publications")</li>
-                                    <li>@Html.ActionLink("Lista publikacji", "Manage", "Publications")</li>
+                                    @*<li>@Html.ActionLink("Lista publikacji", "Index", "Publications")</li>*@
                                 </ul>
                         }
                         else if (User.IsInRole("canEdit"))
