--- a/Konferencja/Views/Shared/_Layout.cshtml
+++ b/Konferencja/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
                                     <li>@Html.ActionLink("Statusem publikacji", "Manage", "Publications")</li>
                                     <li>@Html.ActionLink("Konferencjami", "Index", "Conferences")</li>
                                     <li>@Html.ActionLink("Publikacjami", "Index", "Publications")</li>
+                                    <li>@Html.ActionLink("Recenzjami", "Index", "Reviews")</li>
                                     <li>@Html.ActionLink("Recenzentami", "Index", "Reviewers")</li>
                                 </ul>
                         }
