--- a/Konferencja/Views/Publications/Edit.cshtml
+++ b/Konferencja/Views/Publications/Edit.cshtml
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ConferenceID, "ConferenceID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ConferenceID, "Konferencja", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ConferenceID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ConferenceID, "", new { @class = "text-danger" })
